src/static/index.css
:root {
  --text: #111;
  --bg: #fff;
  --ghost: #444;
  --active-cell: #ddd;
  --inactive-cell: #fefefe;
  --active-border: #111;
  --inactive-border: #111;
}

@media (prefers-color-scheme: dark) {
  :root {
    --text: #eee;
    --bg: #000;
    --ghost: #bbb;
    --active-cell: #333;
    --inactive-cell: #101010;
    --active-border: #eee;
    --inactive-border: #eee;
  }
}

.ghost {
  font-size: small;
  color: var(--ghost);
  font-weight: bold;
}
.ghostUnit {
  font-size: smaller;
}

body {
  background-color: var(--bg);
  color: var(--text);
  font-family: Avenir, Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: 'Avenir', Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-align: left;
  font-size: large;

  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -o-user-select: none;
  user-select: none;
}

#header {
  display: flex;
  flex-direction: row;
  align-items: center;
}
.heartbeat {
  border-radius: 50%;
  background-color: grey;
  height: 1em;
  width: 1em;
  margin-right: 0.5em;
  float: left;
}

.squeamish {
  margin: 0 0.5em;
}

.navigator {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
  margin: 0.5em 0.5em 0 0.5em;
}
.navigator-targets {
  box-sizing: border-box;
  flex-grow: 1;
  text-align: center;
  padding: 0.5em;
}
.multiple-navigator-container {
  box-sizing: border-box;
  flex-grow: 2;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-evenly;
}

.disk-io-nav {
  display: flex;
  justify-content: space-evenly;
}

.hidden {
  display: none;
}

#footer {
  position: fixed;
  right: 0;
  bottom: 0;
  padding-right: 0.25em;
  padding-bottom: 0.25em;
  width: 100%;
  background-color: var(--bg);
  color: var(--text);
  text-align: right;
}

